# spin-glass-anneal-rl

./: .clang-format  .dockerignore  .editorconfig  .env.example  .markdownlint.json  .pre-commit-config.yaml  .release-it.json  API_DOCUMENTATION.md  ARCHITECTURE.md  AUTONOMOUS_EXECUTION_REPORT.md  AUTONOMOUS_SDLC_FINAL_REPORT.md  AUTONOMOUS_SDLC_REPORT.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  FINAL_DEPLOYMENT_REPORT.md  IMPLEMENTATION_REPORT.md  Makefile  PRODUCTION_DEPLOYMENT_GUIDE.md  PROJECT_CHARTER.md  QUALITY_REPORT.md  README.md  SECURITY.md  autonomous_experimental_validation.py  autonomous_sdlc_validation_report_1755815218.json  autonomous_sdlc_validation_report_20250819_005852.json  breakthrough_validation_results.json  comprehensive_quality_gates.py  comprehensive_quality_gates_final.py  comprehensive_quality_gates_generation3.py  deploy.sh  deploy_progressive_quality_gates.py  deploy_progressive_quality_gates_simple.py  deploy_system.py  docker-compose.yml  final_quality_gates_report_1755696824.json  generation3_quality_gates_1755956814_comprehensive_report.json  generation3_scaling_demo.py  (+50 more)
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  release.yml
deployment/: README.md  deployment_summary.json
deployment/docker/: Dockerfile
deployment/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  namespace.yaml  service.yaml
deployment/scripts/: build.sh  deploy.sh  health-check.sh
docker/: nginx.conf  prometheus.yml  supervisor.conf
docs/: ROADMAP.md  SETUP_REQUIRED.md
docs/adr/: 0001-gpu-acceleration-strategy.md  adr-template.md
docs/deployment/: README.md
docs/testing/: README.md
docs/workflows/: README.md
docs/workflows/examples/: ci.yml  security-scan.yml
examples/: basic_usage.py  tsp_example.py
k8s/: k8s-deployment.yaml  k8s-hpa.yaml
monitoring/: grafana-dashboard.json  prometheus.yml
sgrl_env/: pyvenv.cfg
spin_glass_env/: pyvenv.cfg
spin_glass_rl/: __init__.py  _version.py  cli.py
spin_glass_rl/annealing/: __init__.py  batch_processor.py  cuda_kernels.py  gpu_annealer.py  multi_gpu.py  parallel_tempering.py  result.py  temperature_scheduler.py
spin_glass_rl/benchmarking/: __init__.py  performance_benchmark.py
spin_glass_rl/benchmarks/: __init__.py  benchmark_runner.py  problem_benchmarks.py  standard_problems.py
spin_glass_rl/cli/: advanced_cli.py  interactive_optimizer.py
spin_glass_rl/core/: __init__.py  constraints.py  coupling_matrix.py  energy_computer.py  ising_model.py  minimal_ising.py  spin_dynamics.py
spin_glass_rl/deployment/: global_infrastructure.py  production_config.py
spin_glass_rl/distributed/: __init__.py  cluster_manager.py  coordinator.py  load_balancer.py
spin_glass_rl/monitoring/: adaptive_monitoring_system.py  system_monitor.py
spin_glass_rl/optimization/: adaptive_optimization.py  adaptive_scaling.py  high_performance_computing.py  high_performance_scaling.py  performance_accelerator.py  performance_cache.py  performance_optimizer.py  quantum_edge_computing.py
spin_glass_rl/problems/: __init__.py  base.py  coordination.py  resource_allocation.py  routing.py  scheduling.py  simple_scheduler.py
spin_glass_rl/research/: __init__.py  adaptive_meta_rl.py  breakthrough_algorithms.py  experimental_validation.py  federated_optimization.py  federated_quantum_hybrid.py  meta_learning_optimization.py  multi_objective_pareto.py  novel_algorithms.py  performance_analysis.py  quantum_hybrid_algorithms.py  unified_research_framework.py
spin_glass_rl/rl_integration/: __init__.py  environment.py  hybrid_agent.py  reward_shaping.py  training_pipeline.py
spin_glass_rl/scaling/: intelligent_auto_scaling.py  quantum_edge_computing.py
spin_glass_rl/security/: advanced_security_framework.py  enterprise_security.py  input_validation.py
spin_glass_rl/utils/: __init__.py  advanced_monitoring.py  comprehensive_monitoring.py  comprehensive_validation.py  exceptions.py  health_checks.py  logging.py  monitoring.py  performance.py  production_monitoring.py  robust_error_handling.py  robust_execution.py  robust_logging.py  security.py  validation.py
tests/: __init__.py  conftest.py
tests/data/: .gitkeep
tests/e2e/: __init__.py  test_workflow_example.py
tests/fixtures/: __init__.py  sample_problems.py
tests/integration/: __init__.py  test_complete_pipeline.py  test_end_to_end_tsp.py  test_pipeline_example.py
tests/unit/: __init__.py  test_annealing_components.py  test_annealing_gpu_annealer.py  test_core_ising_model.py  test_example.py  test_optimization_components.py  test_problems_scheduling.py  test_research_algorithms.py
